--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "v2.26.0",
     "image-webpack-loader": "^3.2.0",
     "node-sass": "^4.1.1",
